2009-01-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_scale_trough):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scale_trough):
	* src/murrine_style.c (murrine_style_draw_box):
	* src/murrine_types.h:
	Add support for GtkScale::trough-side-details and fill-level.
	This will break old themes (the scale's trough).
	To update your theme, please add this in the gtkrc:
	GtkScale::trough-side-details = 1

2009-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_shadow):
	Don't draw statusbar'S HIGHLIGHT when shadow-type is GTK_SHADOW_NONE.

2009-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Fixed a bug in the scale_trough not fully filled in some cases.
	Thanks lucazade for pointing this out.

2009-01-22  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button):
	Automatically reduce glow_shade on disabled buttons.

2009-01-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_shadow):
	Clamp workspace switcher's roundness to 3.

2009-01-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_tab),
	(murrine_draw_radiobutton), (murrine_draw_checkbox):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_tab), (murrine_rgba_draw_radiobutton),
	(murrine_rgba_draw_checkbox):
	Automatically reduce lightborder_shade for widgets in disabled state:
	button, radio and check, tab.
	Fixed reliefstyle = 0 in radio and check.
	Feedback is always welcome, if you prefer before the lightborder_shade
	tweak.

2009-01-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_scale_draw_gradient):
	* src/murrine_draw_rgba.c (murrine_scale_draw_gradient):
	Fixed a misalignment of the scale's hightlight.
